adding odds without incorrect math

--- a/cfbets/bets/templates/bets/base_my_bets.html
+++ b/cfbets/bets/templates/bets/base_my_bets.html
@@ -44,6 +44,7 @@
                     <tr>
                         <th>Prop Bet</th>
                         <th>Wager</th>
+                        <th>Odds</th>
                         <th>Max Bets</th>
                         <th>Bets Remain</th>
                         <th>End Date</th>
@@ -54,6 +55,7 @@
                     <tr>
                         <td>{{ bet.prop_text }}</td>
                         <td>${{ bet.prop_wager }}</td>
+                        <td>{{ bet.odds }}</td>
                         <td>{{ bet.max_wagers }}</td>
                         <td>{{ bet.remaining_wagers }}</td>
                         <td>{{ bet.end_date|date:"M d Y H:i" }}</td>
@@ -85,6 +87,7 @@
                         <th>Proposee</th>
                         <th>Prop Bet</th>
                         <th>Wager</th>
+                        <th>Odds</th>
                     </tr>
                 </thead>
                 <tfoot>
@@ -102,6 +105,7 @@
                             <td>{{ bet.accepted_user.get_full_name }}</td>
                             <td>{{ bet.accepted_prop.prop_text }}</td>
                             <td>${{ bet.accepted_prop.prop_wager }}</td>
+                            <td>{{ bet.odds }}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
@@ -118,6 +122,7 @@
                 <tr>
                     <th>{% trans "Prop Bet" %}</th>
                     <th>{% trans "Wager" %}</th>
+                    <th>{% trans "Odds" %}</th>
                     <th>{% trans "Against" %}</th>
                     <th>{% trans "Winner" %}</th>
                 </tr>
