--- a/cfbets/bets/templates/bets/base_all_bets.html
+++ b/cfbets/bets/templates/bets/base_all_bets.html
@@ -47,6 +47,7 @@
                         <th>Proposee</th>
                         <th>Prop Bet</th>
                         <th>Wager</th>
+                        <th>Odds</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -56,6 +57,7 @@
                         <td>{{ bet.accepted_user.get_full_name }}</td>
                         <td>{{ bet.accepted_prop.prop_text }}</td>
                         <td>${{ bet.accepted_prop.prop_wager }}</td>
+                        <td>{{ bet.accepted_prop.odds }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -75,6 +77,7 @@
                     <th>{% trans "Proposee" %}</th>
                     <th>{% trans "Prop Bet" %}</th>
                     <th>{% trans "Wager" %}</th>
+                    <th>{% trans "Odds" %}</th>
                     <th>{% trans "Winner" %}</th>
                 </tr>
             </thead>
